--- a/src/index.html
+++ b/src/index.html
@@ -231,8 +231,8 @@
           <div class="swiper-button-prev js-campaign-arrow"></div>
           <div class="swiper-button-next js-campaign-arrow"></div>
           <div class="campaign__header section-header">
-            <h2 class="section-header__title"><span>C</span>ampaign</h2>
-            <p class="section-header__sub">キャンペーン</p>
+            <p class="section-header__title"><span>C</span>ampaign</p>
+            <h2 class="section-header__sub">キャンペーン</h2>
           </div>
           <div class="campaign__swiper-wrap campaign-swiper">
             <div class="campaign__swiper js-campaign-swiper swiper">
@@ -264,6 +264,7 @@
                     </div>
                   </a>
                 </li>
+
                 <li class="campaign-card swiper-slide">
                   <a href="#">
                     <div class="campaign-card__img">
@@ -293,6 +294,7 @@
                     </div>
                   </a>
                 </li>
+
                 <li class="campaign-card swiper-slide">
                   <a href="#">
                     <div class="campaign-card__img">
@@ -320,6 +322,7 @@
                     </div>
                   </a>
                 </li>
+
                 <li class="campaign-card swiper-slide">
                   <a href="#">
                     <div class="campaign-card__img">
@@ -363,24 +366,36 @@
       <section class="about-us layout-about-us">
         <div class="about-us__inner inner">
           <div class="about-us__header section-header">
-            <h2 class="section-header__title"><span>A</span>bout us</h2>
-            <p class="section-header__sub">私たちについて</p>
+            <p class="section-header__title"><span>A</span>bout us</p>
+            <h2 class="section-header__sub">私たちについて</h2>
           </div>
 
           <div class="about-us__wrapper">
             <div class="about-us__img-wrap">
               <div class="about-us__img-left">
-                <img
-                  src="./assets/images/common/about-us_1.jpg"
-                  alt="屋根の上のシーサー"
-                />
+                <picture>
+                  <source
+                    media="(max-width: 768px)"
+                    srcset="./assets/images/common/about-us_1.jpg"
+                  />
+                  <img
+                    src="./assets/images/common/about-us-pc_1.jpg"
+                    alt="屋根の上のシーサー"
+                  />
+                </picture>
               </div>
 
               <div class="about-us__img-right">
-                <img
-                  src="./assets/images/common/about-us_2.jpg"
-                  alt="二匹の魚が泳いでいる様子"
-                />
+                <picture>
+                  <source
+                    media="(max-width: 768px)"
+                    srcset="./assets/images/common/about-us_2.jpg"
+                  />
+                  <img
+                    src="./assets/images/common/about-us-pc_2.jpg"
+                    alt="屋根の上のシーサー"
+                  />
+                </picture>
               </div>
             </div>
 
@@ -408,8 +423,8 @@
       <section class="information layout-information">
         <div class="information__inner inner">
           <div class="information__header section-header">
-            <h2 class="section-header__title"><span>I</span>nformation</h2>
-            <p class="section-header__sub">ダイビング情報</p>
+            <p class="section-header__title"><span>I</span>nformation</p>
+            <h2 class="section-header__sub">ダイビング情報</h2>
           </div>
 
           <div class="information__wrap">
@@ -441,10 +456,10 @@
       <section class="blog layout-blog">
         <div class="blog__inner inner">
           <div class="blog__header section-header">
-            <h2 class="blog__header-title section-header__title">
+            <p class="blog__header-title section-header__title">
               <span>B</span>log
-            </h2>
-            <p class="section-header__sub">ブログ</p>
+            </p>
+            <h2 class="section-header__sub">ブログ</h2>
           </div>
 
           <ul class="blog__items blog-card">
@@ -526,8 +541,8 @@
       <section class="voice voice-layout">
         <div class="voice__inner inner">
           <div class="voice__header section-header">
-            <h2 class="section-header__title"><span>V</span>oice</h2>
-            <p class="section-header__sub">お客様の声</p>
+            <p class="section-header__title"><span>V</span>oice</p>
+            <h2 class="section-header__sub">お客様の声</h2>
           </div>
 
           <ul class="voice__items voice-card">
@@ -604,8 +619,8 @@
       <section id="price" class="price price-layout">
         <div class="price__inner inner">
           <div class="price__header section-header">
-            <h2 class="section-header__title"><span>P</span>rice</h2>
-            <p class="section-header__sub">料金一覧</p>
+            <p class="section-header__title"><span>P</span>rice</p>
+            <h2 class="section-header__sub">料金一覧</h2>
           </div>
 
           <div class="price__wrap">
@@ -741,12 +756,12 @@
             </div>
             <div class="contact__contents">
               <div class="contact__header section-header">
-                <h2 class="contact__header-title section-header__title">
+                <p class="contact__header-title section-header__title">
                   <span>C</span>ontact
-                </h2>
-                <p class="contact__header-title-sub section-header__sub">
-                  お問い合わせ
                 </p>
+                <h2 class="contact__header-title-sub section-header__sub">
+                  お問い合わせ
+                </h2>
                 <p class="contact__button-text">ご予約・お問い合わせはコチラ</p>
               </div>
               <div class="contact__button">
