--- a/src/index.html
+++ b/src/index.html
@@ -393,7 +393,7 @@
                   />
                   <img
                     src="./assets/images/common/about-us-pc_2.jpg"
-                    alt="屋根の上のシーサー"
+                    alt="2匹の魚が泳いでいる様子"
                   />
                 </picture>
               </div>
@@ -459,7 +459,7 @@
             <p class="blog__header-title section-header__title">
               <span>B</span>log
             </p>
-            <h2 class="section-header__sub">ブログ</h2>
+            <h2 class="blog__header-title-sub section-header__sub">ブログ</h2>
           </div>
 
           <ul class="blog__items blog-card">
@@ -626,7 +626,7 @@
           <div class="price__wrap">
             <picture class="price__img">
               <source
-                media="(max-width: 768px)"
+                media="(max-width: 767px)"
                 srcset="./assets/images/common/price-sp.jpg"
               />
               <img
