--- a/src/index.html
+++ b/src/index.html
@@ -236,7 +236,7 @@
           </div>
           <div class="campaign__swiper-wrap campaign-swiper">
             <div class="campaign__swiper js-campaign-swiper swiper">
-              <ul class="swiper-wrapper">
+              <ul class="campaign__swiper-wrapper swiper-wrapper">
                 <li class="campaign-card swiper-slide">
                   <a href="#">
                     <div class="campaign-card__img">
