--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
     </div>
 
     <header class="header js-header">
-      <div class="header__inner">
+      <div class="header__inner js-header-inner">
         <h1 class="header__logo">
           <a href="#">
             <img src="./assets/images/common/codeups.svg" alt="ロゴ" />
