--- a/src/index.html
+++ b/src/index.html
@@ -163,7 +163,7 @@
     </header>
 
     <main>
-      <section class="mv mv-layout">
+      <section class="mv layout-mv">
         <div class="mv__inner">
           <div class="mv__swiper js-mv-swiper swiper">
             <div class="swiper-wrapper">
@@ -226,7 +226,7 @@
         </div>
       </section>
 
-      <section class="campaign campaign-layout">
+      <section class="campaign layout-campaign">
         <div class="campaign__inner inner">
           <div class="swiper-button-prev js-campaign-arrow"></div>
           <div class="swiper-button-next js-campaign-arrow"></div>
@@ -538,7 +538,7 @@
         </div>
       </section>
 
-      <section class="voice voice-layout">
+      <section class="voice layout-voice">
         <div class="voice__inner inner">
           <div class="voice__header section-header">
             <p class="section-header__title"><span>V</span>oice</p>
@@ -616,7 +616,7 @@
         </div>
       </section>
 
-      <section id="price" class="price price-layout">
+      <section id="price" class="price layout-price">
         <div class="price__inner inner">
           <div class="price__header section-header">
             <p class="section-header__title"><span>P</span>rice</p>
@@ -722,7 +722,7 @@
         </div>
       </section>
 
-      <section class="contact contact-layout">
+      <section class="contact layout-contact">
         <div class="contact__inner inner">
           <div class="contact__wrap">
             <div class="contact__info">
