--- a/src/index.html
+++ b/src/index.html
@@ -616,7 +616,7 @@
         </div>
       </section>
 
-      <section id="price" class="price layout-price">
+      <section class="price layout-price">
         <div class="price__inner inner">
           <div class="price__header section-header">
             <p class="section-header__title"><span>P</span>rice</p>
