--- a/src/index.html
+++ b/src/index.html
@@ -462,8 +462,8 @@
             <h2 class="blog__header-title-sub section-header__sub">ブログ</h2>
           </div>
 
-          <ul class="blog__items blog-card">
-            <li class="blog-card__item">
+          <ul class="blog__items blog-cards">
+            <li class="blog-cards__item blog-card">
               <a href="#">
                 <div class="blog-card__img">
                   <img
@@ -485,7 +485,7 @@
                 </div>
               </a>
             </li>
-            <li class="blog-card__item">
+            <li class="blog-cards__item blog-card">
               <a href="#">
                 <div class="blog-card__img">
                   <img
@@ -507,7 +507,7 @@
                 </div>
               </a>
             </li>
-            <li class="blog-card__item">
+            <li class="blog-cards__item blog-card">
               <a href="#">
                 <div class="blog-card__img">
                   <img
@@ -545,8 +545,8 @@
             <h2 class="section-header__sub">お客様の声</h2>
           </div>
 
-          <ul class="voice__items voice-card">
-            <li class="voice-card__item">
+          <ul class="voice__items voice-cards">
+            <li class="voice-cards__item voice-card">
               <a href="#">
                 <div class="voice-card__body">
                   <div class="voice-card__wrap">
@@ -576,7 +576,7 @@
                 </div>
               </a>
             </li>
-            <li class="voice-card__item">
+            <li class="voice-cards__item voice-card">
               <a href="#">
                 <div class="voice-card__body">
                   <div class="voice-card__wrap">
