--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <meta name="footer-nav" content="ダイビングショップ" />
     <meta name="keywords" content="" />
     <!-- ogp -->
-    <meta property="og:title" content=" CodeUps" />
+    <meta property="og:title" content="CodeUps" />
     <meta property="og:type" content="web site" />
     <meta property="og:url" content="" />
     <meta
@@ -93,7 +93,7 @@
         <nav class="header__nav">
           <ul class="header__nav-items">
             <li class="header__nav-item">
-              <a href="#">Campaign<span>キャンペーン</span></a>
+              <a href="./campaign.html">Campaign<span>キャンペーン</span></a>
             </li>
             <li class="header__nav-item">
               <a href="#">About us<span>私たちについて</span></a>
@@ -130,38 +130,36 @@
             <nav class="nav-contents__wrap">
               <ul class="nav-contents__contents">
                 <li class="nav-contents__group">
-                  <ul>
-                    <li class="nav-contents__title">
-                      <a href="#">キャンペーン</a>
-                    </li>
-                      <li>
-                        <ul class="nav-contents__items">
-                          <li class="nav-contents__item">
-                            <a href="#">ライセンス取得</a>
-                          </li>
-                          <li class="nav-contents__item">
-                            <a href="#">貸切体験ダイビング</a>
-                          </li>
-                          <li class="nav-contents__item">
-                            <a href="#">ナイトダイビング</a>
-                          </li>
-                        </ul>
+                  <div class="nav-contents__title">
+                    <a href="./campaign.html">キャンペーン</a>
+                  </div>
+                  <div>
+                    <ul class="nav-contents__items">
+                      <li class="nav-contents__item">
+                        <a href="#">ライセンス取得</a>
                       </li>
-                      <li class="nav-contents__title">
-                        <a href="#">私たちについて</a>
+                      <li class="nav-contents__item">
+                        <a href="#">貸切体験ダイビング</a>
                       </li>
-                  </ul>
+                      <li class="nav-contents__item">
+                        <a href="#">ナイトダイビング</a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="nav-contents__title">
+                    <a href="#">私たちについて</a>
+                  </div>
                 </li>
               </ul>
-  
+
               <ul class="nav-contents__contents">
                 <li class="nav-contents__group">
-                  <li class="nav-contents__title">
+                  <div class="nav-contents__title">
                     <a href="#">お客様の声</a>
-                  </li>
-                  <li class="nav-contents__title">
+                  </div>
+                  <div class="nav-contents__title">
                     <a href="#">料金一覧</a>
-                  </li>
+                  </div>
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
                       <a href="#">ライセンス講習</a>
@@ -175,47 +173,45 @@
                   </ul>
                 </li>
               </ul>
-  
+
               <ul class="nav-contents__contents">
                 <li class="nav-contents__group">
-                  <ul>
-                    <li class="nav-contents__title">
-                      <a href="">ダイビング情報</a>
-                    </li>
-                    <li>
-                      <ul class="nav-contents__items">
-                        <li class="nav-contents__item">
-                          <a href="#">ライセンス講習</a>
-                        </li>
-                        <li class="nav-contents__item">
-                          <a href="#">体験ダイビング</a>
-                        </li>
-                        <li class="nav-contents__item">
-                          <a href="#">ファンダイビング</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li class="nav-contents__title">
-                      <a href="#">ブログ</a>
-                    </li>
-                  </ul>
+                  <div class="nav-contents__title">
+                    <a href="">ダイビング情報</a>
+                  </div>
+                  <div>
+                    <ul class="nav-contents__items">
+                      <li class="nav-contents__item">
+                        <a href="#">ライセンス講習</a>
+                      </li>
+                      <li class="nav-contents__item">
+                        <a href="#">体験ダイビング</a>
+                      </li>
+                      <li class="nav-contents__item">
+                        <a href="#">ファンダイビング</a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="nav-contents__title">
+                    <a href="#">ブログ</a>
+                  </div>
                 </li>
               </ul>
-  
+
               <ul class="nav-contents__contents">
                 <li class="nav-contents__group">
-                  <li class="nav-contents__title">
+                  <div class="nav-contents__title">
                     <a href="#">よくある質問</a>
-                  </li>
-                  <li class="nav-contents__title">
+                  </div>
+                  <div class="nav-contents__title">
                     <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
-                  </li>
-                  <li class="nav-contents__title">
+                  </div>
+                  <div class="nav-contents__title">
                     <a href="#">利用規約</a>
-                  </li>
-                  <li class="nav-contents__title">
+                  </div>
+                  <div class="nav-contents__title">
                     <a href="#">お問い合わせ</a>
-                  </li>
+                  </div>
                 </li>
               </ul>
             </nav>
@@ -416,7 +412,7 @@
             </div>
           </div>
           <div class="campaign__button">
-            <a href="#" class="button">
+            <a href="./campaign.html" class="button">
               <span>View more</span>
             </a>
           </div>
@@ -519,7 +515,9 @@
             <p class="section-header__title section-header__title--white">
               Blog
             </p>
-            <h2 class="section-header__sub section-header__sub--white">ブログ</h2>
+            <h2 class="section-header__sub section-header__sub--white">
+              ブログ
+            </h2>
           </div>
 
           <ul class="blog__items blog-cards">
@@ -787,7 +785,10 @@
           <div class="contact__wrap">
             <div class="contact__info">
               <div class="contact__logo">
-                <img src="./assets/images/common/contact-logo.svg" alt="CodeUpsのロゴ" />
+                <img
+                  src="./assets/images/common/contact-logo.svg"
+                  alt="CodeUpsのロゴ"
+                />
               </div>
               <div class="contact__detail">
                 <div class="contact__lists-wrap">
@@ -822,8 +823,8 @@
                 <h2 class="section-header__sub section-header__sub--contact">
                   お問い合わせ
                 </h2>
-                <p class="contact__button-text">ご予約・お問い合わせはコチラ</p>
               </div>
+              <p class="contact__button-text">ご予約・お問い合わせはコチラ</p>
               <div class="contact__button">
                 <a href="#" class="button">
                   <span>Contact us</span>
@@ -859,38 +860,36 @@
           <nav class="nav-contents__wrap">
             <ul class="nav-contents__contents">
               <li class="nav-contents__group">
-                <ul>
-                  <li class="nav-contents__title">
-                    <a href="#">キャンペーン</a>
-                  </li>
-                    <li>
-                      <ul class="nav-contents__items">
-                        <li class="nav-contents__item">
-                          <a href="#">ライセンス取得</a>
-                        </li>
-                        <li class="nav-contents__item">
-                          <a href="#">貸切体験ダイビング</a>
-                        </li>
-                        <li class="nav-contents__item">
-                          <a href="#">ナイトダイビング</a>
-                        </li>
-                      </ul>
+                <div class="nav-contents__title">
+                  <a href="./campaign.html">キャンペーン</a>
+                </div>
+                <div>
+                  <ul class="nav-contents__items">
+                    <li class="nav-contents__item">
+                      <a href="#">ライセンス取得</a>
                     </li>
-                    <li class="nav-contents__title">
-                      <a href="#">私たちについて</a>
+                    <li class="nav-contents__item">
+                      <a href="#">貸切体験ダイビング</a>
                     </li>
-                </ul>
+                    <li class="nav-contents__item">
+                      <a href="#">ナイトダイビング</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="nav-contents__title">
+                  <a href="#">私たちについて</a>
+                </div>
               </li>
             </ul>
 
             <ul class="nav-contents__contents">
               <li class="nav-contents__group">
-                <li class="nav-contents__title">
+                <div class="nav-contents__title">
                   <a href="#">お客様の声</a>
-                </li>
-                <li class="nav-contents__title">
+                </div>
+                <div class="nav-contents__title">
                   <a href="#">料金一覧</a>
-                </li>
+                </div>
                 <ul class="nav-contents__items">
                   <li class="nav-contents__item">
                     <a href="#">ライセンス講習</a>
@@ -907,49 +906,46 @@
 
             <ul class="nav-contents__contents">
               <li class="nav-contents__group">
-                <ul>
-                  <li class="nav-contents__title">
-                    <a href="">ダイビング情報</a>
-                  </li>
-                  <li>
-                    <ul class="nav-contents__items">
-                      <li class="nav-contents__item">
-                        <a href="#">ライセンス講習</a>
-                      </li>
-                      <li class="nav-contents__item">
-                        <a href="#">体験ダイビング</a>
-                      </li>
-                      <li class="nav-contents__item">
-                        <a href="#">ファンダイビング</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="nav-contents__title">
-                    <a href="#">ブログ</a>
-                  </li>
-                </ul>
+                <div class="nav-contents__title">
+                  <a href="">ダイビング情報</a>
+                </div>
+                <div>
+                  <ul class="nav-contents__items">
+                    <li class="nav-contents__item">
+                      <a href="#">ライセンス講習</a>
+                    </li>
+                    <li class="nav-contents__item">
+                      <a href="#">体験ダイビング</a>
+                    </li>
+                    <li class="nav-contents__item">
+                      <a href="#">ファンダイビング</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="nav-contents__title">
+                  <a href="#">ブログ</a>
+                </div>
               </li>
             </ul>
 
             <ul class="nav-contents__contents">
               <li class="nav-contents__group">
-                <li class="nav-contents__title">
+                <div class="nav-contents__title">
                   <a href="#">よくある質問</a>
-                </li>
-                <li class="nav-contents__title">
+                </div>
+                <div class="nav-contents__title">
                   <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
-                </li>
-                <li class="nav-contents__title">
+                </div>
+                <div class="nav-contents__title">
                   <a href="#">利用規約</a>
-                </li>
-                <li class="nav-contents__title">
+                </div>
+                <div class="nav-contents__title">
                   <a href="#">お問い合わせ</a>
-                </li>
+                </div>
               </li>
             </ul>
           </nav>
         </div>
-
       </div>
       <div class="footer__copyright">
         <small
