--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
   </head>
   <body>
     <!-- loading animation -->
-    <section class="loading js-loading">
+    <!-- <section class="loading js-loading">
       <div class="loading__title-wrap title">
         <h2 class="title__main title__main--green">DIVING</h2>
         <p class="title__sub title__sub--green">into the ocean</p>
@@ -72,7 +72,7 @@
         <h2 class="title__main">DIVING</h2>
         <p class="title__sub">into the ocean</p>
       </div>
-    </section>
+    </section> -->
 
     <!-- ページトップボタン -->
     <div class="page-top-button js-page-top">
@@ -96,10 +96,12 @@
               <a href="./campaign.html">Campaign<span>キャンペーン</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="#">About us<span>私たちについて</span></a>
+              <a href="./about-us.html">About us<span>私たちについて</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="#">Information<span>ダイビング情報</span></a>
+              <a href="./information.html"
+                >Information<span>ダイビング情報</span></a
+              >
             </li>
             <li class="header__nav-item">
               <a href="#">Blog<span>ブログ</span></a>
@@ -147,7 +149,7 @@
                     </ul>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">私たちについて</a>
+                    <a href="./about-us.html">私たちについて</a>
                   </div>
                 </li>
               </ul>
@@ -177,7 +179,7 @@
               <ul class="nav-contents__contents">
                 <li class="nav-contents__group">
                   <div class="nav-contents__title">
-                    <a href="">ダイビング情報</a>
+                    <a href="./information.html">ダイビング情報</a>
                   </div>
                   <div>
                     <ul class="nav-contents__items">
@@ -466,7 +468,7 @@
                   ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
                 </div>
                 <div class="about-us__button">
-                  <a href="#" class="button">
+                  <a href="./about-us.html" class="button">
                     <span>View more</span>
                   </a>
                 </div>
@@ -499,7 +501,7 @@
                   正規登録店として、安心安全に初めての方でも安心安全にライセンス取得をサポート致します。
                 </p>
                 <div class="information__button">
-                  <a href="#" class="button">
+                  <a href="./information.html" class="button">
                     <span>View more</span>
                   </a>
                 </div>
@@ -877,7 +879,7 @@
                   </ul>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">私たちについて</a>
+                  <a href="./about-us.html">私たちについて</a>
                 </div>
               </li>
             </ul>
@@ -907,7 +909,7 @@
             <ul class="nav-contents__contents">
               <li class="nav-contents__group">
                 <div class="nav-contents__title">
-                  <a href="">ダイビング情報</a>
+                  <a href="./information.html">ダイビング情報</a>
                 </div>
                 <div>
                   <ul class="nav-contents__items">
