--- a/src/about-us.html
+++ b/src/about-us.html
@@ -65,10 +65,10 @@
         <nav class="header__nav">
           <ul class="header__nav-items">
             <li class="header__nav-item">
-              <a href="#">Campaign<span>キャンペーン</span></a>
+              <a href="./campaign.html">Campaign<span>キャンペーン</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="./about-us.html">About us<span>私たちについて</span></a>
+              <a href="#">About us<span>私たちについて</span></a>
             </li>
             <li class="header__nav-item">
               <a href="./information.html"
@@ -105,7 +105,7 @@
               <ul class="nav-contents__contents">
                 <li class="nav-contents__group">
                   <div class="nav-contents__title">
-                    <a href="#">キャンペーン</a>
+                    <a href="./campaign.html">キャンペーン</a>
                   </div>
                   <div>
                     <ul class="nav-contents__items">
@@ -121,7 +121,7 @@
                     </ul>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="./about-us.html">私たちについて</a>
+                    <a href="#">私たちについて</a>
                   </div>
                 </li>
               </ul>
@@ -200,22 +200,22 @@
           <picture class="sub-mv__img">
             <source
               media="(max-width: 768px)"
-              srcset="./assets/images/sub/sub-campaign-sp-img.jpg"
+              srcset="./assets/images/sub/sub-aboutus-sp-img.jpg"
             />
             <img
-              src="./assets/images/sub/sub-campaign-pc-img.jpg"
+              src="./assets/images/sub/sub-aboutus-pc-img.jpg"
               alt="2匹の黄色い魚が泳いでいる様子"
             />
           </picture>
         </div>
         <div class="sub-mv__title-wrap sub-page-title">
-          <h2 class="sub-page-title__main">campaign</h2>
+          <h2 class="sub-page-title__main">about us</h2>
         </div>
       </section>
 
-      <div class="sub-campaign layout-sub-campaign">
-        <div class="sub-campaign__inner inner">
-          <div class="sub-campaign__breadcrumb breadcrumb">
+      <section class="sub-about-us layout-sub-about-us">
+        <div class="sub-about-us__inner inner">
+          <div class="sub-about-us__breadcrumb breadcrumb">
             <div class="breadcrumb__inner">
               <!-- Breadcrumb NavXTで出力される部分 ここから -->
               <span>
@@ -225,245 +225,109 @@
               </span>
               &nbsp;&gt;&nbsp;
               <span>
-                <span class="breadcrumb__current-item">キャンペーン</span>
+                <span class="breadcrumb__current-item">私たちについて</span>
               </span>
               <!-- Breadcrumb NavXTで出力される部分 ここまで -->
             </div>
           </div>
 
-          <div class="sub-campaign__tab tab">
-            <ul class="tab__menu">
-              <li class="tab__menu-item">ALL</li>
-              <li class="tab__menu-item">ライセンス講習</li>
-              <li class="tab__menu-item">ファンダイビング</li>
-              <li class="tab__menu-item">体験ダイビング</li>
-            </ul>
-          </div>
-
-          <div class="sub-campaign__content">
-            <ul class="sub-campaign__cards">
-              <li class="sub-campaign__item">
-                <div class="campaign-card campaign-card--large">
-                  <div class="campaign-card__img">
-                    <img
-                      src="./assets/images/common/campaign_1.jpg"
-                      alt="海の中を色鮮やかなたくさんの魚が泳いでいる様子"
-                    />
-                  </div>
-                  <div class="campaign-card__item-body">
-                    <div class="campaign-card__meta">
-                      <span class="campaign-card__tag">ライセンス講習</span>
-                      <p
-                        class="campaign-card__category campaign-card__category--large"
-                      >
-                        ライセンス取得
-                      </p>
-                    </div>
-                    <div class="campaign-card__contents">
-                      <p class="campaign-card__title">全部コミコミ(お一人様)</p>
-                      <div class="campaign-card__price-body">
-                        <span class="campaign-card__price">¥56,000</span>
-                        <span class="campaign-card__price-discount"
-                          >¥46,000</span
-                        >
-                      </div>
-                      <div class="campaign-card__text-box u-desktop">
-                        <p class="campaign-card__text">
-                          ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
-                        </p>
-                        <div class="campaign-card__wrap">
-                          <time
-                            class="campaign-card__date"
-                            datetime="2023-06-01/2023-09-30"
-                            >2023/6/1-9/30</time
-                          >
-                          <p class="contact__button-text">
-                            ご予約・お問い合わせはコチラ
-                          </p>
-                          <div class="contact__button contact__button--margin">
-                            <a href="#" class="button">
-                              <span>Contact us</span>
-                            </a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-
-              <li class="sub-campaign__item">
-                <div class="campaign-card campaign-card--large">
-                  <div class="campaign-card__img">
-                    <img
-                      src="./assets/images/common/campaign_2.jpg"
-                      alt="透明感のある海と停まっている船の様子"
-                    />
-                  </div>
-                  <div class="campaign-card__item-body">
-                    <div class="campaign-card__meta">
-                      <span class="campaign-card__tag">体験ダイビング</span>
-                      <p
-                        class="campaign-card__category campaign-card__category--large"
-                      >
-                        貸切体験ダイビング
-                      </p>
-                    </div>
-                    <div class="campaign-card__contents">
-                      <p class="campaign-card__title">全部コミコミ(お一人様)</p>
-                      <div class="campaign-card__price-body">
-                        <span class="campaign-card__price">¥24,000</span>
-                        <span class="campaign-card__price-discount"
-                          >¥18,000</span
-                        >
-                      </div>
-                      <div class="campaign-card__text-box u-desktop">
-                        <p class="campaign-card__text">
-                          ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
-                        </p>
-                        <div class="campaign-card__wrap">
-                          <time
-                            class="campaign-card__date"
-                            datetime="2023-06-01/2023-09-30"
-                            >2023/6/1-9/30</time
-                          >
-                          <p class="contact__button-text">
-                            ご予約・お問い合わせはコチラ
-                          </p>
-                          <div class="contact__button contact__button--margin">
-                            <a href="#" class="button">
-                              <span>Contact us</span>
-                            </a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-
-              <li class="sub-campaign__item">
-                <div class="campaign-card campaign-card--large">
-                  <div class="campaign-card__img">
-                    <img
-                      src="./assets/images/common/campaign_3.jpg"
-                      alt="夜の海をたくさんのクラゲが泳いでいる様子"
-                    />
-                  </div>
-                  <div class="campaign-card__item-body">
-                    <div class="campaign-card__meta">
-                      <span class="campaign-card__tag">体験ダイビング</span>
-                      <p
-                        class="campaign-card__category campaign-card__category--large"
-                      >
-                        ナイトダイビング
-                      </p>
-                    </div>
-                    <div class="campaign-card__contents">
-                      <p class="campaign-card__title">全部コミコミ(お一人様)</p>
-                      <div class="campaign-card__price-body">
-                        <span class="campaign-card__price">¥10,000</span>
-                        <span class="campaign-card__price-discount"
-                          >¥8,000</span
-                        >
-                      </div>
-                      <div class="campaign-card__text-box u-desktop">
-                        <p class="campaign-card__text">
-                          ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
-                        </p>
-                        <div class="campaign-card__wrap">
-                          <time
-                            class="campaign-card__date"
-                            datetime="2023-06-01/2023-09-30"
-                            >2023/6/1-9/30</time
-                          >
-                          <p class="contact__button-text">
-                            ご予約・お問い合わせはコチラ
-                          </p>
-                          <div class="contact__button contact__button--margin">
-                            <a href="#" class="button">
-                              <span>Contact us</span>
-                            </a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-
-              <li class="sub-campaign__item">
-                <div class="campaign-card campaign-card--large">
-                  <div class="campaign-card__img">
-                    <img
-                      src="./assets/images/common/campaign_4.jpg"
-                      alt="ダイビングをしている4人の人が海面に顔を出し話している様子"
-                    />
-                  </div>
-                  <div class="campaign-card__item-body">
-                    <div class="campaign-card__meta">
-                      <span class="campaign-card__tag">ファンダイビング</span>
-                      <p
-                        class="campaign-card__category campaign-card__category--large"
-                      >
-                        貸切ファンダイビング
-                      </p>
-                    </div>
-                    <div class="campaign-card__contents">
-                      <p class="campaign-card__title">全部コミコミ(お一人様)</p>
-                      <div class="campaign-card__price-body">
-                        <span class="campaign-card__price">¥20,000</span>
-                        <span class="campaign-card__price-discount"
-                          >¥16,000</span
-                        >
-                      </div>
-                      <div class="campaign-card__text-box u-desktop">
-                        <p class="campaign-card__text">
-                          ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
-                        </p>
-                        <div class="campaign-card__wrap">
-                          <time
-                            class="campaign-card__date"
-                            datetime="2023-06-01/2023-09-30"
-                            >2023/6/1-9/30</time
-                          >
-                          <p class="contact__button-text">
-                            ご予約・お問い合わせはコチラ
-                          </p>
-                          <div class="contact__button contact__button--margin">
-                            <a href="#" class="button">
-                              <span>Contact us</span>
-                            </a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-
-          <div class="sub-campaign__pagenavi pagenavi">
-            <div class="pagenavi__inner">
-              <!-- WP-PageNaviで出力される部分 ここから -->
-              <div class="wp-pagenavi" role="navigation">
-                <a class="previouspostslink" rel="prev" href="#">&lt;</a>
-                <span class="current">1</span>
-                <a class="page larger" href="#">2</a>
-                <a class="page larger" href="#">3</a>
-                <a class="page larger" href="#">4</a>
-                <a class="page larger u-desktop" href="#">5</a>
-                <a class="page larger u-desktop" href="#">6</a>
-                <a class="nextpostslink" rel="next" href="#">&gt;</a>
+          <div class="sub-about-us__wrapper">
+            <div class="about-us__img-wrap about-us">
+              <div class="about-us__img-left about-us__img-left--noShow">
+                <picture>
+                  <source
+                    media="(max-width: 768px)"
+                    srcset="./assets/images/common/about-us_1.jpg"
+                  />
+                  <img
+                    src="./assets/images/common/about-us-pc_1.jpg"
+                    alt="赤い屋根の上にいる赤いシーサー"
+                  />
+                </picture>
               </div>
-              <!-- WP-PageNaviで出力される部分 ここまで -->
+
+              <div class="about-us__img-right about-us__img-right--subPage">
+                <picture>
+                  <source
+                    media="(max-width: 768px)"
+                    srcset="./assets/images/common/about-us_2.jpg"
+                  />
+                  <img
+                    src="./assets/images/common/about-us-pc_2.jpg"
+                    alt="2匹の黄色の魚が泳いでいる様子"
+                  />
+                </picture>
+              </div>
+            </div>
+
+            <div class="about-us__contents about-us__contents--sub">
+              <h3 class="about-us__title about-us__title--white">
+                Dive into<br />
+                the Ocean
+              </h3>
+              <div class="about-us__text-wrap">
+                <div class="about-us__text">
+                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
+                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="sub-about-us__gallery gallery">
+            <div class="gallery__inner">
+              <div class="gallery__header section-header">
+                <p class="section-header__title">Gallery</p>
+                <h2 class="section-header__sub">フォト</h2>
+              </div>
+
+              <div class="gallery__modal js-modal">
+                <ul class="gallery__list gallery-list">
+                  <li class="gallery-list__item js-modal-open">
+                    <img
+                      src="./assets/images/sub/sub-aboutus_1.jpg"
+                      alt="海の中でたくさんの赤い小さな魚が泳いでいる様子"
+                    />
+                  </li>
+                  <li class="gallery-list__item js-modal-open">
+                    <img
+                      src="./assets/images/sub/sub-aboutus_2.jpg"
+                      alt="透明な海にボートが浮かんでいる様子"
+                    />
+                  </li>
+                  <li class="gallery-list__item js-modal-open">
+                    <img
+                      src="./assets/images/sub/sub-aboutus_3.jpg"
+                      alt="2匹の黄色い魚が多いでいる様子"
+                    />
+                  </li>
+                  <li class="gallery-list__item js-modal-open">
+                    <img
+                      src="./assets/images/sub/sub-aboutus_4.jpg"
+                      alt="海の中の黄色の魚の様子"
+                    />
+                  </li>
+                  <li class="gallery-list__item js-modal-open">
+                    <img
+                      src="./assets/images/sub/sub-aboutus_5.jpg"
+                      alt="大量の魚が泳いでいる様子"
+                    />
+                  </li>
+                  <li class="gallery-list__item js-modal-open">
+                    <img
+                      src="./assets/images/sub/sub-aboutus_6.jpg"
+                      alt="珊瑚礁と黄色の2匹の魚の様子"
+                    />
+                  </li>
+                </ul>
+                <div class="zoom__content"></div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+      </section>
 
-      <section class="contact layout-contact">
+      <section class="contact layout-contact layout-contact--aboutus">
         <div class="contact__inner inner">
           <div class="contact__wrap">
             <div class="contact__info">
@@ -560,7 +424,7 @@
                   </ul>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="./about-us.html">私たちについて</a>
+                  <a href="#">私たちについて</a>
                 </div>
               </li>
             </ul>
@@ -590,7 +454,7 @@
             <ul class="nav-contents__contents">
               <li class="nav-contents__group">
                 <div class="nav-contents__title">
-                  <a href="./information.html">ダイビング情報</a>
+                  <a href="">ダイビング情報</a>
                 </div>
                 <div>
                   <ul class="nav-contents__items">
