--- a/src/about-us.html
+++ b/src/about-us.html
@@ -76,19 +76,19 @@
               >
             </li>
             <li class="header__nav-item">
-              <a href="#">Blog<span>ブログ</span></a>
+              <a href="./blog.html">Blog<span>ブログ</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="#">Voice<span>お客様の声</span></a>
+              <a href="./voice.html">Voice<span>お客様の声</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="#">Price<span>料金一覧</span></a>
+              <a href="./price.html">Price<span>料金一覧</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="#">FAQ<span>よくある質問</span></a>
+              <a href="./faq.html">FAQ<span>よくある質問</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="#">Contact<span>お問合せ</span></a>
+              <a href="./contact.html">Contact<span>お問合せ</span></a>
             </li>
           </ul>
         </nav>
@@ -121,7 +121,7 @@
                     </ul>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">私たちについて</a>
+                    <a href="./about-us.html">私たちについて</a>
                   </div>
                 </li>
               </ul>
@@ -132,7 +132,7 @@
                     <a href="#">お客様の声</a>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">料金一覧</a>
+                    <a href="./price.html">料金一覧</a>
                   </div>
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
@@ -167,7 +167,7 @@
                     </ul>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">ブログ</a>
+                    <a href="./blog.html">ブログ</a>
                   </div>
                 </li>
               </ul>
@@ -184,7 +184,7 @@
                     <a href="#">利用規約</a>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">お問い合わせ</a>
+                    <a href="./contact.html">お問い合わせ</a>
                   </div>
                 </li>
               </ul>
@@ -373,7 +373,7 @@
                 <p class="contact__button-text">ご予約・お問い合わせはコチラ</p>
               </div>
               <div class="contact__button">
-                <a href="#" class="button">
+                <a href="./contact.html" class="button">
                   <span>Contact us</span>
                 </a>
               </div>
@@ -408,7 +408,7 @@
             <ul class="nav-contents__contents">
               <li class="nav-contents__group">
                 <div class="nav-contents__title">
-                  <a href="#">キャンペーン</a>
+                  <a href="./campaign.html">キャンペーン</a>
                 </div>
                 <div>
                   <ul class="nav-contents__items">
@@ -424,7 +424,7 @@
                   </ul>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">私たちについて</a>
+                  <a href="./about-us.html">私たちについて</a>
                 </div>
               </li>
             </ul>
@@ -432,10 +432,10 @@
             <ul class="nav-contents__contents">
               <li class="nav-contents__group">
                 <div class="nav-contents__title">
-                  <a href="#">お客様の声</a>
+                  <a href="./voice.html">お客様の声</a>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">料金一覧</a>
+                  <a href="./price.html">料金一覧</a>
                 </div>
                 <ul class="nav-contents__items">
                   <li class="nav-contents__item">
@@ -454,7 +454,7 @@
             <ul class="nav-contents__contents">
               <li class="nav-contents__group">
                 <div class="nav-contents__title">
-                  <a href="">ダイビング情報</a>
+                  <a href="./information.html">ダイビング情報</a>
                 </div>
                 <div>
                   <ul class="nav-contents__items">
@@ -470,7 +470,7 @@
                   </ul>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">ブログ</a>
+                  <a href="./blog.html">ブログ</a>
                 </div>
               </li>
             </ul>
@@ -478,7 +478,7 @@
             <ul class="nav-contents__contents">
               <li class="nav-contents__group">
                 <div class="nav-contents__title">
-                  <a href="#">よくある質問</a>
+                  <a href="./faq.html">よくある質問</a>
                 </div>
                 <div class="nav-contents__title">
                   <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
@@ -487,7 +487,7 @@
                   <a href="#">利用規約</a>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">お問い合わせ</a>
+                  <a href="./contact.html">お問い合わせ</a>
                 </div>
               </li>
             </ul>
