--- a/src/campaign.html
+++ b/src/campaign.html
@@ -76,19 +76,19 @@
               >
             </li>
             <li class="header__nav-item">
-              <a href="#">Blog<span>ブログ</span></a>
+              <a href="./blog.html">Blog<span>ブログ</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="#">Voice<span>お客様の声</span></a>
+              <a href="./voice.html">Voice<span>お客様の声</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="#">Price<span>料金一覧</span></a>
+              <a href="./price.html">Price<span>料金一覧</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="#">FAQ<span>よくある質問</span></a>
+              <a href="./faq.html">FAQ<span>よくある質問</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="#">Contact<span>お問合せ</span></a>
+              <a href="./contact.html">Contact<span>お問合せ</span></a>
             </li>
           </ul>
         </nav>
@@ -105,7 +105,7 @@
               <ul class="nav-contents__contents">
                 <li class="nav-contents__group">
                   <div class="nav-contents__title">
-                    <a href="#">キャンペーン</a>
+                    <a href="./campaign.html">キャンペーン</a>
                   </div>
                   <div>
                     <ul class="nav-contents__items">
@@ -132,7 +132,7 @@
                     <a href="#">お客様の声</a>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">料金一覧</a>
+                    <a href="./price.html">料金一覧</a>
                   </div>
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
@@ -167,7 +167,7 @@
                     </ul>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">ブログ</a>
+                    <a href="./blog.html">ブログ</a>
                   </div>
                 </li>
               </ul>
@@ -184,7 +184,7 @@
                     <a href="#">利用規約</a>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">お問い合わせ</a>
+                    <a href="./contact.html">お問い合わせ</a>
                   </div>
                 </li>
               </ul>
@@ -544,7 +544,7 @@
             <ul class="nav-contents__contents">
               <li class="nav-contents__group">
                 <div class="nav-contents__title">
-                  <a href="#">キャンペーン</a>
+                  <a href="./campaign.html">キャンペーン</a>
                 </div>
                 <div>
                   <ul class="nav-contents__items">
@@ -568,10 +568,10 @@
             <ul class="nav-contents__contents">
               <li class="nav-contents__group">
                 <div class="nav-contents__title">
-                  <a href="#">お客様の声</a>
+                  <a href="./voice.html">お客様の声</a>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">料金一覧</a>
+                  <a href="./price.html">料金一覧</a>
                 </div>
                 <ul class="nav-contents__items">
                   <li class="nav-contents__item">
@@ -606,7 +606,7 @@
                   </ul>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">ブログ</a>
+                  <a href="./blog.html">ブログ</a>
                 </div>
               </li>
             </ul>
@@ -614,7 +614,7 @@
             <ul class="nav-contents__contents">
               <li class="nav-contents__group">
                 <div class="nav-contents__title">
-                  <a href="#">よくある質問</a>
+                  <a href="./faq.html">よくある質問</a>
                 </div>
                 <div class="nav-contents__title">
                   <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
@@ -623,7 +623,7 @@
                   <a href="#">利用規約</a>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">お問い合わせ</a>
+                  <a href="./contact.html">お問い合わせ</a>
                 </div>
               </li>
             </ul>
