--- a/src/index.html
+++ b/src/index.html
@@ -104,19 +104,19 @@
               >
             </li>
             <li class="header__nav-item">
-              <a href="#">Blog<span>ブログ</span></a>
+              <a href="./blog.html">Blog<span>ブログ</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="#">Voice<span>お客様の声</span></a>
+              <a href="./voice.html">Voice<span>お客様の声</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="#">Price<span>料金一覧</span></a>
+              <a href="./price.html">Price<span>料金一覧</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="#">FAQ<span>よくある質問</span></a>
+              <a href="./faq.html">FAQ<span>よくある質問</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="#">Contact<span>お問合せ</span></a>
+              <a href="./contact.html">Contact<span>お問合せ</span></a>
             </li>
           </ul>
         </nav>
@@ -160,7 +160,7 @@
                     <a href="#">お客様の声</a>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">料金一覧</a>
+                    <a href="./price.html">料金一覧</a>
                   </div>
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
@@ -195,7 +195,7 @@
                     </ul>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">ブログ</a>
+                    <a href="./blog.html">ブログ</a>
                   </div>
                 </li>
               </ul>
@@ -212,7 +212,7 @@
                     <a href="#">利用規約</a>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">お問い合わせ</a>
+                    <a href="./contact.html">お問い合わせ</a>
                   </div>
                 </li>
               </ul>
@@ -669,7 +669,7 @@
             </li>
           </ul>
           <div class="voice__button">
-            <a href="#" class="button">
+            <a href="./voice.html" class="button">
               <span>View more</span>
             </a>
           </div>
@@ -775,7 +775,7 @@
             </div>
           </div>
           <div class="price__button">
-            <a href="#" class="button">
+            <a href="./price.html" class="button">
               <span>View more</span>
             </a>
           </div>
@@ -828,7 +828,7 @@
               </div>
               <p class="contact__button-text">ご予約・お問い合わせはコチラ</p>
               <div class="contact__button">
-                <a href="#" class="button">
+                <a href="./contact.html" class="button">
                   <span>Contact us</span>
                 </a>
               </div>
@@ -887,10 +887,10 @@
             <ul class="nav-contents__contents">
               <li class="nav-contents__group">
                 <div class="nav-contents__title">
-                  <a href="#">お客様の声</a>
+                  <a href="./voice.html">お客様の声</a>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">料金一覧</a>
+                  <a href="./price.html">料金一覧</a>
                 </div>
                 <ul class="nav-contents__items">
                   <li class="nav-contents__item">
@@ -925,7 +925,7 @@
                   </ul>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">ブログ</a>
+                  <a href="./blog.html">ブログ</a>
                 </div>
               </li>
             </ul>
@@ -933,7 +933,7 @@
             <ul class="nav-contents__contents">
               <li class="nav-contents__group">
                 <div class="nav-contents__title">
-                  <a href="#">よくある質問</a>
+                  <a href="./faq.html">よくある質問</a>
                 </div>
                 <div class="nav-contents__title">
                   <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
@@ -942,7 +942,7 @@
                   <a href="#">利用規約</a>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">お問い合わせ</a>
+                  <a href="./contact.html">お問い合わせ</a>
                 </div>
               </li>
             </ul>
